docs/examples/invalid/semanticErr/extension/void-type/returnInVoidFunction.wacc
# returning an expression in a void function is an error

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  void f() is
    return 42
  end
  skip
end

